--- a/docker/registry/codeAnalysis/sonarqube/sonar-project.properties
+++ b/docker/registry/codeAnalysis/sonarqube/sonar-project.properties
@@ -13,5 +13,6 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 sonar.login=7f9a82bb9ed66ae0eec94841ff339d567bc866ce
-sonar.language=cs
+sonar.test.exclusions=**/test/**/*.*
+sonar.exclusions=**/ai/**/*.*,**/jdbc/**/*.*,**/mpt/**/*.*,**/jcr/**/*.*,**/JDBC*
 # sonar.scm.provider=git
